--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,19 @@
 
     </head>
     <body>
+        <nav class="navbar nav-expant-lg navbar-dark bg-dark">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
+                <span class = "navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                <div class="navbar">
+                    <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                    <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign-up</a>
+                    <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                    <a class="nav-item nav-link" id="home" href="/">Home</a>
+                </div>
+            </div>
+        </nav>
         <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
