--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,18 +9,20 @@
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
             />
+            <!--  -->
         <link
             rel="stylesheet"
+            
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             crossorigin="anonymous"
         />
 
-        <title>{% block title %}Home{%end block%}</title>
+        <title>{% block title %}Home{%endblock%}</title>
 
     </head>
     <body>
         <nav class="navbar nav-expant-lg navbar-dark bg-dark">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class = "navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
